# aws-s3-cli

./: New.txt  README.md  main.py  pyproject.toml
app/: s3_cli.py
