[project]
name = "pythonproject"
version = "0.1.0"
description = "AWS S3 operations project"
authors = [
    {name = "Sandro"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-magic (>=0.4.27,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
